添加调度器；添加调度器 helm chart

--- a/charts/scheduler/Chart.yaml
+++ b/charts/scheduler/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: agent
-description: Agent service for hex-tech on Kubernetes
+name: scheduler
+description: Scheduler service for hex-tech on Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
 #
