--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -61,6 +61,27 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
+      path: /validate-rocket-hextech-io-v1alpha1-distribution
+  failurePolicy: Fail
+  name: vdistribution.kb.io
+  rules:
+  - apiGroups:
+    - rocket.hextech.io
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - distributions
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
       path: /validate-rocket-hextech-io-v1alpha1-template
   failurePolicy: Fail
   name: vtemplate.kb.io
@@ -68,7 +89,7 @@ webhooks:
   - apiGroups:
     - rocket.hextech.io
     apiVersions:
-    - v1beta1
+    - v1alpha1
     operations:
     - CREATE
     - UPDATE
