--- a/charts/manager/values.yaml
+++ b/charts/manager/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: hextech/manager
+  repository: manager
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 enabledControllers: ""
 
