--- a/charts/scheduler/values.yaml
+++ b/charts/scheduler/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: hextech/scheduler
+  repository: scheduler
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
