--- a/charts/scheduler/values.yaml
+++ b/charts/scheduler/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: scheduler
+  repository: rocket
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
