--- a/artifacts/example/application.yaml
+++ b/artifacts/example/application.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: test
   namespace: sample
+  annotations:
+    rocket.hextech.io/primary-stateless: ""
 spec:
   regions:
     - beijing
