--- a/config/crd/bases/rocket.hextech.io_workloads.yaml
+++ b/config/crd/bases/rocket.hextech.io_workloads.yaml
@@ -61,7 +61,7 @@ spec:
                 items:
                   type: string
                 type: array
-              tempate:
+              template:
                 properties:
                   clonesetTemplate:
                     description: openKruise workload, CloneSet
@@ -36814,6 +36814,177 @@ spec:
                     format: date-time
                     type: string
                 type: object
+              deploymentStatus:
+                description: DeploymentStatus is the most recently observed status
+                  of the Deployment.
+                properties:
+                  availableReplicas:
+                    description: Total number of available pods (ready for at least
+                      minReadySeconds) targeted by this deployment.
+                    format: int32
+                    type: integer
+                  collisionCount:
+                    description: Count of hash collisions for the Deployment. The
+                      Deployment controller uses this field as a collision avoidance
+                      mechanism when it needs to create the name for the newest ReplicaSet.
+                    format: int32
+                    type: integer
+                  conditions:
+                    description: Represents the latest available observations of a
+                      deployment's current state.
+                    items:
+                      description: DeploymentCondition describes the state of a deployment
+                        at a certain point.
+                      properties:
+                        lastTransitionTime:
+                          description: Last time the condition transitioned from one
+                            status to another.
+                          format: date-time
+                          type: string
+                        lastUpdateTime:
+                          description: The last time this condition was updated.
+                          format: date-time
+                          type: string
+                        message:
+                          description: A human readable message indicating details
+                            about the transition.
+                          type: string
+                        reason:
+                          description: The reason for the condition's last transition.
+                          type: string
+                        status:
+                          description: Status of the condition, one of True, False,
+                            Unknown.
+                          type: string
+                        type:
+                          description: Type of deployment condition.
+                          type: string
+                      required:
+                      - status
+                      - type
+                      type: object
+                    type: array
+                  observedGeneration:
+                    description: The generation observed by the deployment controller.
+                    format: int64
+                    type: integer
+                  readyReplicas:
+                    description: readyReplicas is the number of pods targeted by this
+                      Deployment with a Ready Condition.
+                    format: int32
+                    type: integer
+                  replicas:
+                    description: Total number of non-terminated pods targeted by this
+                      deployment (their labels match the selector).
+                    format: int32
+                    type: integer
+                  unavailableReplicas:
+                    description: Total number of unavailable pods targeted by this
+                      deployment. This is the total number of pods that are still
+                      required for the deployment to have 100% available capacity.
+                      They may either be pods that are running but not yet available
+                      or pods that still have not been created.
+                    format: int32
+                    type: integer
+                  updatedReplicas:
+                    description: Total number of non-terminated pods targeted by this
+                      deployment that have the desired template spec.
+                    format: int32
+                    type: integer
+                type: object
+              extendStatefulsetStatus:
+                description: StatefulSetStatus defines the observed state of StatefulSet
+                properties:
+                  availableReplicas:
+                    description: AvailableReplicas is the number of Pods created by
+                      the StatefulSet controller that have been ready for minReadySeconds.
+                    format: int32
+                    type: integer
+                  collisionCount:
+                    description: collisionCount is the count of hash collisions for
+                      the StatefulSet. The StatefulSet controller uses this field
+                      as a collision avoidance mechanism when it needs to create the
+                      name for the newest ControllerRevision.
+                    format: int32
+                    type: integer
+                  conditions:
+                    description: Represents the latest available observations of a
+                      statefulset's current state.
+                    items:
+                      description: StatefulSetCondition describes the state of a statefulset
+                        at a certain point.
+                      properties:
+                        lastTransitionTime:
+                          description: Last time the condition transitioned from one
+                            status to another.
+                          format: date-time
+                          type: string
+                        message:
+                          description: A human readable message indicating details
+                            about the transition.
+                          type: string
+                        reason:
+                          description: The reason for the condition's last transition.
+                          type: string
+                        status:
+                          description: Status of the condition, one of True, False,
+                            Unknown.
+                          type: string
+                        type:
+                          description: Type of statefulset condition.
+                          type: string
+                      required:
+                      - status
+                      - type
+                      type: object
+                    type: array
+                  currentReplicas:
+                    description: currentReplicas is the number of Pods created by
+                      the StatefulSet controller from the StatefulSet version indicated
+                      by currentRevision.
+                    format: int32
+                    type: integer
+                  currentRevision:
+                    description: currentRevision, if not empty, indicates the version
+                      of the StatefulSet used to generate Pods in the sequence [0,currentReplicas).
+                    type: string
+                  labelSelector:
+                    description: LabelSelector is label selectors for query over pods
+                      that should match the replica count used by HPA.
+                    type: string
+                  observedGeneration:
+                    description: observedGeneration is the most recent generation
+                      observed for this StatefulSet. It corresponds to the StatefulSet's
+                      generation, which is updated on mutation by the API Server.
+                    format: int64
+                    type: integer
+                  readyReplicas:
+                    description: readyReplicas is the number of Pods created by the
+                      StatefulSet controller that have a Ready Condition.
+                    format: int32
+                    type: integer
+                  replicas:
+                    description: replicas is the number of Pods created by the StatefulSet
+                      controller.
+                    format: int32
+                    type: integer
+                  updateRevision:
+                    description: updateRevision, if not empty, indicates the version
+                      of the StatefulSet used to generate Pods in the sequence [replicas-updatedReplicas,replicas)
+                    type: string
+                  updatedReplicas:
+                    description: updatedReplicas is the number of Pods created by
+                      the StatefulSet controller from the StatefulSet version indicated
+                      by updateRevision.
+                    format: int32
+                    type: integer
+                required:
+                - availableReplicas
+                - currentReplicas
+                - readyReplicas
+                - replicas
+                - updatedReplicas
+                type: object
               jobStatus:
                 description: JobStatus represents the current state of a Job.
                 properties:
@@ -36944,11 +37115,11 @@ spec:
                 - Running
                 type: string
               statefulsetStatus:
-                description: StatefulSetStatus defines the observed state of StatefulSet
+                description: StatefulSetStatus represents the current state of a StatefulSet.
                 properties:
                   availableReplicas:
-                    description: AvailableReplicas is the number of Pods created by
-                      the StatefulSet controller that have been ready for minReadySeconds.
+                    description: Total number of available pods (ready for at least
+                      minReadySeconds) targeted by this statefulset.
                     format: int32
                     type: integer
                   collisionCount:
@@ -36999,10 +37170,6 @@ spec:
                     description: currentRevision, if not empty, indicates the version
                       of the StatefulSet used to generate Pods in the sequence [0,currentReplicas).
                     type: string
-                  labelSelector:
-                    description: LabelSelector is label selectors for query over pods
-                      that should match the replica count used by HPA.
-                    type: string
                   observedGeneration:
                     description: observedGeneration is the most recent generation
                       observed for this StatefulSet. It corresponds to the StatefulSet's
@@ -37010,8 +37177,8 @@ spec:
                     format: int64
                     type: integer
                   readyReplicas:
-                    description: readyReplicas is the number of Pods created by the
-                      StatefulSet controller that have a Ready Condition.
+                    description: readyReplicas is the number of pods created for this
+                      StatefulSet with a Ready Condition.
                     format: int32
                     type: integer
                   replicas:
@@ -37030,11 +37197,7 @@ spec:
                     format: int32
                     type: integer
                 required:
-                - availableReplicas
-                - currentReplicas
-                - readyReplicas
                 - replicas
-                - updatedReplicas
                 type: object
               type:
                 type: string
