--- a/config/crd/bases/rocket.hextech.io_workloads.yaml
+++ b/config/crd/bases/rocket.hextech.io_workloads.yaml
@@ -18472,6 +18472,72 @@ spec:
                   extendStatefulsetTemplate:
                     description: openKruise workload, StatefulSet
                     properties:
+                      lifecycle:
+                        description: Lifecycle defines the lifecycle hooks for Pods
+                          pre-delete, in-place update.
+                        properties:
+                          inPlaceUpdate:
+                            description: InPlaceUpdate is the hook before Pod to update
+                              and after Pod has been updated.
+                            properties:
+                              finalizersHandler:
+                                items:
+                                  type: string
+                                type: array
+                              labelsHandler:
+                                additionalProperties:
+                                  type: string
+                                type: object
+                              markPodNotReady:
+                                description: 'MarkPodNotReady = true means: - Pod
+                                  will be set to ''NotReady'' at preparingDelete/preparingUpdate
+                                  state. - Pod will be restored to ''Ready'' at Updated
+                                  state if it was set to ''NotReady'' at preparingUpdate
+                                  state. Default to false.'
+                                type: boolean
+                            type: object
+                          preDelete:
+                            description: PreDelete is the hook before Pod to be deleted.
+                            properties:
+                              finalizersHandler:
+                                items:
+                                  type: string
+                                type: array
+                              labelsHandler:
+                                additionalProperties:
+                                  type: string
+                                type: object
+                              markPodNotReady:
+                                description: 'MarkPodNotReady = true means: - Pod
+                                  will be set to ''NotReady'' at preparingDelete/preparingUpdate
+                                  state. - Pod will be restored to ''Ready'' at Updated
+                                  state if it was set to ''NotReady'' at preparingUpdate
+                                  state. Default to false.'
+                                type: boolean
+                            type: object
+                        type: object
+                      persistentVolumeClaimRetentionPolicy:
+                        description: PersistentVolumeClaimRetentionPolicy describes
+                          the policy used for PVCs created from the StatefulSet VolumeClaimTemplates.
+                          This requires the StatefulSetAutoDeletePVC feature gate
+                          to be enabled, which is alpha.
+                        properties:
+                          whenDeleted:
+                            description: WhenDeleted specifies what happens to PVCs
+                              created from StatefulSet VolumeClaimTemplates when the
+                              StatefulSet is deleted. The default policy of `Retain`
+                              causes PVCs to not be affected by StatefulSet deletion.
+                              The `Delete` policy causes those PVCs to be deleted.
+                            type: string
+                          whenScaled:
+                            description: WhenScaled specifies what happens to PVCs
+                              created from StatefulSet VolumeClaimTemplates when the
+                              StatefulSet is scaled down. The default policy of `Retain`
+                              causes PVCs to not be affected by a scaledown. The `Delete`
+                              policy causes the associated PVCs for any excess pods
+                              above the replica count to be deleted.
+                            type: string
+                        type: object
                       podManagementPolicy:
                         description: podManagementPolicy controls how pods are created
                           during initial scale up, when replacing pods on nodes, or
@@ -18492,6 +18558,20 @@ spec:
                           defaults to 1. TODO: Consider a rename of this field.'
                         format: int32
                         type: integer
+                      reserveOrdinals:
+                        description: 'reserveOrdinals controls the ordinal numbers
+                          that should be reserved, and the replicas will always be
+                          the expectation number of running Pods. For a sts with replicas=3
+                          and its Pods in [0, 1, 2]: - If you want to migrate Pod-1
+                          and reserve this ordinal, just set spec.reserveOrdinal to
+                          [1]. Then controller will delete Pod-1 and create Pod-3
+                          (existing Pods will be [0, 2, 3]) - If you just want to
+                          delete Pod-1, you should set spec.reserveOrdinal to [1]
+                          and spec.replicas to 2. Then controller will delete Pod-1
+                          (existing Pods will be [0, 2])'
+                        items:
+                          type: integer
+                        type: array
                       revisionHistoryLimit:
                         description: revisionHistoryLimit is the maximum number of
                           revisions that will be maintained in the StatefulSet's revision
@@ -18500,6 +18580,21 @@ spec:
                           The default value is 10.
                         format: int32
                         type: integer
+                      scaleStrategy:
+                        description: scaleStrategy indicates the StatefulSetScaleStrategy
+                          that will be employed to scale Pods in the StatefulSet.
+                        properties:
+                          maxUnavailable:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: 'The maximum number of pods that can be unavailable
+                              during scaling. Value can be an absolute number (ex:
+                              5) or a percentage of desired pods (ex: 10%). Absolute
+                              number is calculated from percentage by rounding down.
+                              It can just be allowed to work with Parallel podManagementPolicy.'
+                            x-kubernetes-int-or-string: true
+                        type: object
                       selector:
                         description: 'selector is a label query over pods that should
                           match the replica count. It must match the pod template''s
