--- a/artifacts/example/application.yaml
+++ b/artifacts/example/application.yaml
@@ -3,8 +3,8 @@ kind: Application
 metadata:
   name: test
   namespace: sample
-  annotations:
-    rocket.hextech.io/primary-stateless: ""
+  # annotations:
+  #   rocket.hextech.io/extended-resource: ""
 spec:
   regions:
     - beijing
