--- a/config/crd/bases/rocket.hextech.io_applications.yaml
+++ b/config/crd/bases/rocket.hextech.io_applications.yaml
@@ -23,7 +23,7 @@ spec:
   versions:
   - additionalPrinterColumns:
     - jsonPath: .status.type
-      name: WORKLOADTYPE
+      name: TYPE
       type: string
     - jsonPath: .spec.cloudArea
       name: AREA
